<resources>
    <string name="app_name">Sante Coffee Merhants</string>
    <string name="farmers">Farmers</string>
    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_default">Select Gender</string>
    <string name="search_title">Search</string>
    <string name="logout">Logout</string>
    <string name="add_farmer">Add new farmer</string>
    <string name="title_activity_items">ItemsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_address">Email Address</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="custom_navigation_drawer_row">Custom Navigation Drawer Row</string>
    <string name="regional_manager">Regional Manager</string>
    <string name="send_email">Send Email</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="region">Region</string>
    <string name="add_new_cooperative_manager">Add New Cooperative Manager</string>
    <string name="edit_cooperative_manager_contact">Edit Cooperative Manager Contact</string>
    <string name="gender">Gender</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="add_new_farmer">Add New Farmer</string>
    <string name="edit_new_farmer">Edit New Farmer</string>
    <string name="birth_certificate">Birth Certificate</string>
    <string name="view_birth_certificate">View Birth Certificate</string>
    <string name="capture">Capture</string>
    <string name="national_id">National Id</string>
    <string name="please_attach_birth_certificate">Please attach birth certificate</string>
    <string name="preview">Preview</string>
    <string name="recapture">Recapture</string>
    <string name="email">Email</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="password">Password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="enter_password_with_more_than_4_characters">Enter password with more than 4 characters</string>
    <string name="enter_valid_email_and_password">Enter valid email and password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="new_user">New User ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
</resources>