<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/listManagerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#2B3D4D"
                    android:text="@string/name" />


                <TextView
                    android:id="@+id/listManagerContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/contact"
                    android:fontFamily="sans-serif"
                    android:textAppearance="?android:textAppearanceSmall"  />

                <TextView
                    android:id="@+id/listManagerEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/email"
                    android:fontFamily="sans-serif"
                    android:textAppearance="?android:textAppearanceSmall" />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/sendEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/send_email"
                    android:fontFamily="sans-serif"
                    style="?attr/borderlessButtonStyle" />
                <Button
                    android:id="@+id/editContact"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/edit_contact"
                    android:fontFamily="sans-serif"
                    style="?attr/borderlessButtonStyle" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>